[project]
name = "phd-ms"
version = "0.0.1"
authors = [
  { name="Perry Beamer", email="perry.beamer@gmail.com" },
]
description = "Domain identification for spatial transcriptomic data at multiple scales"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICENSE.md"]
