[metadata]
name = phd-ms
version = 1.0
author = Perry Beamer
author_email = perry.beamer@gmail.com
description = Multiscale domain identification for spatial transcriptomic data using persistent homology
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = spatial transcriptomics, topological data analysis, multiscale domains

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    gudhi>=3.8.0
    leidenalg>=0.9.0
    matplotlib==3.8.2
    numpy>=1.23.4
    pandas>=2.2.0
    plotly>=5.3.1
    pot>=0.8.0     
    scanpy==1.9.6 
    scipy>=1.9.1
    scikit-learn>=1.5.1
    importlib-metadata
python_requires = >=3.9

[options.packages.find]
exclude =
    tutorials*
