[metadata]
name = phd_ms
version = 0.0.10
author = Perry Beamer
description = Identifying multiscale tissue domains for spatial transcriptomic data using persistent homology.
long_description_content_type = text/markdown
long_description = file: README.md
keywords = multiscale domains, spatial transcriptomics, topological data analysis
license = MIT License
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
package_dir = = .
packages = find:
install_requires =
    gudhi>=3.8.0
    leidenalg>=0.9.0
    matplotlib==3.10.3
    mpl_point_clicker
    numpy>=1.23.4
    pandas>=2.2.0
    pot>=0.8.0
    scanpy==1.11.2
    scipy>=1.9.1
    scikit-learn>=1.5.1
    importlib-metadata
python_requires = >=3.7
[options.packages.find]
exclude =
    examples*
where = .
